# easy_config_example

./: .gitmodules  CMakeLists.txt  README.md  ini.txt  main.cpp  str.h
.github/workflows/: macos-unit.yml  ubuntu-unit.yml  windows-unit.yml
